[package]
authors = ["The Rust Project Developers"]
description = "Integer traits and functions"
documentation = "https://docs.rs/num-integer"
homepage = "https://github.com/rust-num/num-integer"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num-integer"
name = "num-integer"
version = "0.1.36"
readme = "README.md"

[dependencies.num-traits]
version = "0.2.0"
default-features = false

[features]
default = ["std"]
std = []
